--- a/app/globals.css
+++ b/app/globals.css
@@ -57,6 +57,13 @@
       line-height: 1rem; /* 16px */
     }
   }
+
+  @media (min-width: 430px) {
+    .iphone16\:text-base {
+      font-size: 1rem; /* 16px */
+      line-height: 1.5rem; /* 24px */
+    }
+  }
 }
 
 :root {
